--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,19 +1,117 @@
+@media (max-width: 767px){
+.explo{
+    padding: 30px;
+    background-color: #F6F6F6 !important ;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    &__title{
+    font-size: 25px;
+    width: 100%;
+    }
+    &__content{
+        font-weight: 300;
+    }
+    &__btn{
+        font-weight: 500;
+        font-size: 16px;
+        height: 50px;
+        color: #fff;
+        background: linear-gradient(355deg, #9356DC 1%, #FF79DA 100%);
+        padding: 10px 30px;
+        border: none;
+        box-shadow: 0px 4px 10px 0px #00000040;
+        border-radius: 25px;
+    }
+}
 .fonctionnement{
+    margin: 30px;
     &__etape{
         position: relative;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        padding: 50px;
+        font-weight: 500;
+        margin-bottom: 30px;
+        background: #F6F6F6;
+        box-shadow: 0px 4px 15px 0px #00000026;
         padding: 30px;
         border-radius: 20px;
+        .fa-solid, .fas {
+            margin-left: 10px;
+            font-size: 20px;
+            color: grey;
+        }
+        .fa-store{
+            color: #9356DC;
+        }
         .numb{
             position: absolute;
             left: -15px;
-            background-color: rgba(147, 86, 220, 1);
+            background-color: #9356DC;
+            gap: 15px;
             color: white;
             padding: 5px 10px;
             border-radius: 50px;
         }
+        .txt{
+            display: inline-block;
+            font-size: 18px;
+            font-weight: 700;
+            padding-left: 25px;
+            justify-content: center;
+            text-align: center;
+        }
     }
 }
+
+.restau{
+    display: grid;
+    gap: 20px;
+    background-color: #F6F6F6 ;
+    width: 100%;
+    height: auto;
+    h2 {
+        margin-left: 25px;
+    }
+    &__card{
+        background-color: #fff;
+        border-radius: 25px;
+        margin: 15px;
+        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+        img{
+            position: relative;
+            width: 100%;
+            object-fit: cover;
+            height: 230px;
+            border-radius: 25px 25px 0px 0px;
+        }
+        .new{
+            position: absolute;
+            left: 300px;
+            padding: 8px;
+            background-color:green;
+            
+        }
+        h3, p{
+            margin : 0px;
+        }
+        .car__content{
+            display: inline-block;
+        }
+        .text{
+            flex: 1;
+            font-size: 20px;
+            margin: 0;
+            padding: 15px;
+        }
+    
+        
+    }
+
+}
+}
+
+
+
 
 @media (min-width: 1024px) {
     
