Change mobile version

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,3 +9,16 @@ a{
     text-decoration: none;
     color: inherit;
 }
+
+p{
+    font-size: 17px;
+}
+
+h3{
+    font-size: 18px;
+}
+
+.container{
+    max-width: 1440px;
+    margin: 0 auto;
+}
