--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,4 +1,3 @@
-@media (max-width: 767px){
 .explo{
     padding: 30px;
     background-color: #F6F6F6 !important ;
@@ -6,8 +5,9 @@
     align-items: center;
     text-align: center;
     &__title{
-    font-size: 25px;
-    width: 100%;
+        margin-top: 0px;
+        font-size: 25px;
+        width: 100%;
     }
     &__content{
         font-weight: 300;
@@ -25,7 +25,7 @@
     }
 }
 .fonctionnement{
-    margin: 30px;
+    padding: 30px;
     &__etape{
         position: relative;
         padding: 50px;
@@ -64,18 +64,13 @@
 }
 
 .restau{
-    display: grid;
-    gap: 20px;
-    background-color: #F6F6F6 ;
-    width: 100%;
-    height: auto;
-    h2 {
-        margin-left: 25px;
-    }
+    padding: 30px;
+    background-color: #F6F6F6;
     &__card{
+        position: relative;
         background-color: #fff;
         border-radius: 25px;
-        margin: 15px;
+        margin-bottom: 30px;
         filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
         img{
             position: relative;
@@ -99,25 +94,25 @@
         }
         .text{
             flex: 1;
-            font-size: 20px;
             margin: 0;
             padding: 15px;
         }
-    
-        
+        .heart{
+            position: absolute;
+            right: 20px;
+            bottom: 30px;
+        }
     }
 
 }
-}
-
-
-
 
 @media (min-width: 1024px) {
-    
+
     .fonctionnement{
-        display: flex;
-        gap: 20px;
+        &__etapes{
+            display: flex;
+            gap: 30px;
+        }
         &__etape{
             width: 33%;
         }
