--- a/sass/_menus.scss
+++ b/sass/_menus.scss
@@ -1,3 +1,15 @@
 @media (max-width: 767px){
-      
+    .carte{
+        width: 100%;
+        &__card{
+        position: relative;
+        padding: 50px;
+        font-weight: 500;
+        margin-bottom: 30px;
+        background: #F6F6F6;
+        box-shadow: 0px 4px 15px 0px #00000026;
+        padding: 30px;
+        border-radius: 20px;
+    }
+    }
 }
