--- a/sass/main.css
+++ b/sass/main.css
@@ -11,79 +11,186 @@ a {
   color: inherit;
 }
 
-@media (max-width: 767px) {
-  header {
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    font-weight: 500;
-    margin-top: 20px;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
-  }
-  .logo {
-    display: flex;
-    margin-bottom: 15px;
-    width: 100%;
-    justify-content: center;
-  }
-  .logo img {
-    max-width: 100%;
-    height: 35px;
-  }
-  .loca {
-    display: flex;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
-    background: #EAEAEA;
-    justify-content: center;
-    gap: 10px;
-    align-items: center;
-  }
+p {
+  font-size: 17px;
 }
-@media (max-width: 767px) {
-  footer {
-    background-color: #353535;
-  }
-  .foot {
-    display: block;
-  }
-  .foot__logo {
-    padding: 25px;
-    color: white;
-  }
-  .foot__logo img {
-    height: 25px;
-  }
+
+h3 {
+  font-size: 18px;
 }
-@media (max-width: 767px) {
-  .explo {
-    padding: 30px;
-    background-color: #F6F6F6 !important;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  .explo__title {
-    font-size: 25px;
-    width: 100%;
-  }
-  .explo__content {
-    font-weight: 300;
-  }
-  .explo__btn {
-    font-weight: 500;
-    font-size: 16px;
-    height: 50px;
-    color: #fff;
-    background: linear-gradient(355deg, #9356DC 1%, #FF79DA 100%);
-    padding: 10px 30px;
-    border: none;
-    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
-    border-radius: 25px;
-  }
-  .fonctionnement {
-    margin: 30px;
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+header {
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-weight: 500;
+  margin-top: 20px;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
+}
+
+.logo {
+  display: flex;
+  margin-bottom: 15px;
+  width: 100%;
+  justify-content: center;
+}
+
+.logo img {
+  max-width: 100%;
+  height: 35px;
+}
+
+.loca {
+  display: flex;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+  background: #EAEAEA;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+}
+
+footer {
+  background-color: #353535;
+}
+
+.foot {
+  display: block;
+}
+.foot__logo {
+  padding: 25px;
+  color: white;
+}
+.foot__logo img {
+  height: 25px;
+}
+
+.explo {
+  padding: 30px;
+  background-color: #F6F6F6 !important;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.explo__title {
+  margin-top: 0px;
+  font-size: 25px;
+  width: 100%;
+}
+.explo__content {
+  font-weight: 300;
+}
+.explo__btn {
+  font-weight: 500;
+  font-size: 16px;
+  height: 50px;
+  color: #fff;
+  background: linear-gradient(355deg, #9356DC 1%, #FF79DA 100%);
+  padding: 10px 30px;
+  border: none;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
+  border-radius: 25px;
+}
+
+.fonctionnement {
+  padding: 30px;
+}
+.fonctionnement__etape {
+  position: relative;
+  padding: 50px;
+  font-weight: 500;
+  margin-bottom: 30px;
+  background: #F6F6F6;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+  padding: 30px;
+  border-radius: 20px;
+}
+.fonctionnement__etape .fa-solid, .fonctionnement__etape .fas {
+  margin-left: 10px;
+  font-size: 20px;
+  color: grey;
+}
+.fonctionnement__etape .fa-store {
+  color: #9356DC;
+}
+.fonctionnement__etape .numb {
+  position: absolute;
+  left: -15px;
+  background-color: #9356DC;
+  gap: 15px;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 50px;
+}
+.fonctionnement__etape .txt {
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 700;
+  padding-left: 25px;
+  justify-content: center;
+  text-align: center;
+}
+
+.restau {
+  padding: 30px;
+  background-color: #F6F6F6;
+}
+.restau__card {
+  position: relative;
+  background-color: #fff;
+  border-radius: 25px;
+  margin-bottom: 30px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+.restau__card img {
+  position: relative;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 230px;
+  border-radius: 25px 25px 0px 0px;
+}
+.restau__card .new {
+  position: absolute;
+  left: 300px;
+  padding: 8px;
+  background-color: green;
+}
+.restau__card h3, .restau__card p {
+  margin: 0px;
+}
+.restau__card .car__content {
+  display: inline-block;
+}
+.restau__card .text {
+  flex: 1;
+  margin: 0;
+  padding: 15px;
+}
+.restau__card .heart {
+  position: absolute;
+  right: 20px;
+  bottom: 30px;
+}
+
+@media (min-width: 1024px) {
+  .fonctionnement__etapes {
+    display: flex;
+    gap: 30px;
   }
   .fonctionnement__etape {
+    width: 33%;
+  }
+}
+@media (max-width: 767px) {
+  .carte {
+    width: 100%;
+  }
+  .carte__card {
     position: relative;
     padding: 50px;
     font-weight: 500;
@@ -92,81 +199,5 @@ a {
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
     padding: 30px;
     border-radius: 20px;
-  }
-  .fonctionnement__etape .fa-solid, .fonctionnement__etape .fas {
-    margin-left: 10px;
-    font-size: 20px;
-    color: grey;
-  }
-  .fonctionnement__etape .fa-store {
-    color: #9356DC;
-  }
-  .fonctionnement__etape .numb {
-    position: absolute;
-    left: -15px;
-    background-color: #9356DC;
-    gap: 15px;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 50px;
-  }
-  .fonctionnement__etape .txt {
-    display: inline-block;
-    font-size: 18px;
-    font-weight: 700;
-    padding-left: 25px;
-    justify-content: center;
-    text-align: center;
-  }
-  .restau {
-    display: grid;
-    gap: 20px;
-    background-color: #F6F6F6;
-    width: 100%;
-    height: auto;
-  }
-  .restau h2 {
-    margin-left: 25px;
-  }
-  .restau__card {
-    background-color: #fff;
-    border-radius: 25px;
-    margin: 15px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-  }
-  .restau__card img {
-    position: relative;
-    width: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    height: 230px;
-    border-radius: 25px 25px 0px 0px;
-  }
-  .restau__card .new {
-    position: absolute;
-    left: 300px;
-    padding: 8px;
-    background-color: green;
-  }
-  .restau__card h3, .restau__card p {
-    margin: 0px;
-  }
-  .restau__card .car__content {
-    display: inline-block;
-  }
-  .restau__card .text {
-    flex: 1;
-    font-size: 20px;
-    margin: 0;
-    padding: 15px;
-  }
-}
-@media (min-width: 1024px) {
-  .fonctionnement {
-    display: flex;
-    gap: 20px;
-  }
-  .fonctionnement__etape {
-    width: 33%;
   }
 }/*# sourceMappingURL=main.css.map */
