--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,12 +2,29 @@ footer{
     background-color: #353535; 
 }
 .foot{
-display: block;
+display: grid;
+color: white;
+padding: 25px;
 &__logo{
-    padding: 25px;
-    color: white;
-    img{
-        height: 25px;
+    h2{
+        font-family: "Shrikhand", serif;
+        font-weight: 300;
+        margin: 0px;
+        padding-bottom: 15px;
+    }
+}
+&__liens {
+    padding-bottom: 5px;
+    font-weight: 400;
+    .icon{
+        gap: 200px;
+    }
+}
+&__contact {
+    display: grid;
+    font-weight: 300;
+    a {
+        padding-bottom: 5px;
     }
 }
 } 
