--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,15 +1,15 @@
 header {
+    position: relative;
     justify-content: center;
     align-items: center;
     width: 100%;
     font-weight: 500;
-    margin-top: 20px;
     box-shadow: 0px 2px 4px 0px #00000026;
 }
 
 .logo {
     display: flex;
-    margin-bottom: 15px;
+    padding: 15px;
     width: 100%;
     justify-content: center;
     
@@ -29,4 +29,9 @@ header {
     align-items: center;
 }
 
-
+.fa-arrow-left{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 23px;
+}
