--- a/sass/_menus.scss
+++ b/sass/_menus.scss
@@ -1,15 +1,40 @@
-@media (max-width: 767px){
-    .carte{
-        width: 100%;
-        &__card{
-        position: relative;
-        padding: 50px;
-        font-weight: 500;
-        margin-bottom: 30px;
-        background: #F6F6F6;
-        box-shadow: 0px 4px 15px 0px #00000026;
-        padding: 30px;
-        border-radius: 20px;
-    }
-    }
+.imgmen img{
+    width: 100%;
 }
+.menu{
+    h1{
+        font-family: "Shrikhand", serif;
+        font-weight: 200;
+    }
+    width: 95%;
+    padding: 15px;
+    border-radius: 25px 25px 0px 0px;
+    background-color: #F6F6F6;
+    &__section{
+        padding: 10px;
+    }
+    &__carte{
+        position: relative;
+        padding: 10px;
+        margin-bottom: 10px;
+        background: #F6F6F6;
+        box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px #0000001A;
+        border-radius: 20px;
+        h3, p{
+            margin: 0;
+        }
+    }
+    &__btn{
+        font-weight: 500;
+        font-size: 16px;
+        height: 50px;
+        color: #fff;
+        background: linear-gradient(355deg, #9356DC 1%, #FF79DA 100%);
+        padding: 10px 30px;
+        border: none;
+        box-shadow: 0px 4px 10px 0px #00000040;
+        border-radius: 25px;
+        align-items: center;
+        text-align: center;
+    }
+    }
