--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,16 +8,30 @@ header {
 }
 
 .logo {
+    position: relative;
     display: flex;
-    padding: 15px;
-    width: 100%;
     justify-content: center;
+    width: 100%;
     
 }
 
 .logo img {
-    max-width: 100%;
-    height: 35px;
+    width: 170px;
+    padding: 15px;
+    height: auto;
+}
+
+.log{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+}
+.log img{
+    width: 170px;
+    padding: 15px;
+    height: auto;
 }
 
 .loca{
