--- a/sass/_menus.scss
+++ b/sass/_menus.scss
@@ -1,40 +1,92 @@
-.imgmen img{
+img{
     width: 100%;
 }
 .menu{
+    border-radius: 30px 30px 0px 0px;
+    background-color: #F6F6F6;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     h1{
         font-family: "Shrikhand", serif;
         font-weight: 200;
+        text-align: center;
+        padding-left: 25px;
+        padding-top: 25px;
     }
-    width: 95%;
-    padding: 15px;
-    border-radius: 25px 25px 0px 0px;
-    background-color: #F6F6F6;
-    &__section{
-        padding: 10px;
-    }
-    &__carte{
+    .carte{
         position: relative;
+        text-align: left;
         padding: 10px;
-        margin-bottom: 10px;
-        background: #F6F6F6;
-        box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px #0000001A;
+        background: white;
+        margin: 15px;
         border-radius: 20px;
+        box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px #0000001A;
         h3, p{
             margin: 0;
+            padding-top: 3px;
+            padding-bottom: 3px;
         }
+        p{
+            font-size: 14px;
+        }
+        .prix{
+            position: absolute;
+            bottom: 10px;
+            right: 15px;
+            font-weight: 700;
+            font-size: 16px;
+        }
+        
     }
-    &__btn{
+    &__bouton{
         font-weight: 500;
+        width: 50%;
         font-size: 16px;
         height: 50px;
         color: #fff;
+        margin-top: 30px;
+        margin-bottom: 30px;
         background: linear-gradient(355deg, #9356DC 1%, #FF79DA 100%);
         padding: 10px 30px;
         border: none;
         box-shadow: 0px 4px 10px 0px #00000040;
         border-radius: 25px;
+    }
+    .titre3{
+        position: relative;
+    }
+    .titremenu{
+        margin-left: 10px;
+        text-align: left;
+    }
+    .titremenu::first-letter {
+        border-bottom: 2px solid #99E2D0;
+        padding-bottom: 2px;
+      }
+    .heart2{
+        position: absolute;
+        top: 34px;
+        right: 10%;
+    }
+    
+}
+
+  @media (min-width: 1024px) {
+
+    img{
+        height: 320px;
+        object-fit: cover;
+    }
+
+    .container_menu{
+        max-width: 1024px;
+    }
+
+    .menu{
+        margin: 0 auto;
+        justify-content: center;
         align-items: center;
-        text-align: center;
-    }
-    }
+    } 
+
+}  
