--- a/sass/main.css
+++ b/sass/main.css
@@ -39,15 +39,29 @@ header {
 }
 
 .logo {
+  position: relative;
   display: flex;
-  padding: 15px;
-  width: 100%;
   justify-content: center;
+  width: 100%;
 }
 
 .logo img {
-  max-width: 100%;
-  height: 35px;
+  width: 170px;
+  padding: 15px;
+  height: auto;
+}
+
+.log {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.log img {
+  width: 170px;
+  padding: 15px;
+  height: auto;
 }
 
 .loca {
@@ -68,6 +82,7 @@ header {
 
 footer {
   background-color: #353535;
+  width: 100%;
 }
 
 .foot {
@@ -96,6 +111,22 @@ footer {
   padding-bottom: 5px;
 }
 
+@media (min-width: 1024px) {
+  .foot {
+    display: flex;
+    gap: 15px;
+  }
+  .foot__liens {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 30px;
+  }
+  .foot__contact {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 30px;
+  }
+}
 .explo {
   padding: 30px;
   background-color: #F6F6F6 !important;
@@ -183,9 +214,17 @@ footer {
 }
 .restau__card .new {
   position: absolute;
-  left: 300px;
-  padding: 8px;
-  background-color: green;
+  top: 10px;
+  right: 15px;
+  padding: 5px;
+  background: #99E2D0;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
+  border-radius: 3px;
+}
+.restau__card .new1 {
+  color: #008766;
+  font-size: 13px;
+  font-weight: 500;
 }
 .restau__card h3, .restau__card p {
   margin: 0px;
@@ -212,45 +251,100 @@ footer {
   .fonctionnement__etape {
     width: 33%;
   }
+  .bur {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 30px;
+  }
+  .restau__card {
+    width: 100%;
+  }
 }
-.imgmen img {
+img {
   width: 100%;
 }
 
 .menu {
-  width: 95%;
-  padding: 15px;
-  border-radius: 25px 25px 0px 0px;
+  border-radius: 30px 30px 0px 0px;
   background-color: #F6F6F6;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 .menu h1 {
   font-family: "Shrikhand", serif;
   font-weight: 200;
+  text-align: center;
+  padding-left: 25px;
+  padding-top: 25px;
 }
-.menu__section {
-  padding: 10px;
-}
-.menu__carte {
+.menu .carte {
   position: relative;
+  text-align: left;
   padding: 10px;
-  margin-bottom: 10px;
-  background: #F6F6F6;
-  box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
+  background: white;
+  margin: 15px;
   border-radius: 20px;
+  box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1019607843);
 }
-.menu__carte h3, .menu__carte p {
+.menu .carte h3, .menu .carte p {
   margin: 0;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
-.menu__btn {
+.menu .carte p {
+  font-size: 14px;
+}
+.menu .carte .prix {
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+  font-weight: 700;
+  font-size: 16px;
+}
+.menu__bouton {
   font-weight: 500;
+  width: 50%;
   font-size: 16px;
   height: 50px;
   color: #fff;
+  margin-top: 30px;
+  margin-bottom: 30px;
   background: linear-gradient(355deg, #9356DC 1%, #FF79DA 100%);
   padding: 10px 30px;
   border: none;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
   border-radius: 25px;
-  align-items: center;
-  text-align: center;
+}
+.menu .titre3 {
+  position: relative;
+}
+.menu .titremenu {
+  margin-left: 10px;
+  text-align: left;
+}
+.menu .titremenu::first-letter {
+  border-bottom: 2px solid #99E2D0;
+  padding-bottom: 2px;
+}
+.menu .heart2 {
+  position: absolute;
+  top: 34px;
+  right: 10%;
+}
+
+@media (min-width: 1024px) {
+  img {
+    height: 320px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .container_menu {
+    max-width: 1024px;
+  }
+  .menu {
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+  }
 }/*# sourceMappingURL=main.css.map */
