--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -106,6 +106,7 @@
             padding: 15px;
         }
         .heart{
+            opacity: 1;
             position: absolute;
             right: 20px;
             bottom: 30px;
@@ -132,6 +133,10 @@
 
     }
     .restau{
+
+        a{
+            width: 95%;
+        }
         &__card{
             width: 100%;
         }
