--- a/sass/_menus.scss
+++ b/sass/_menus.scss
@@ -1,8 +1,20 @@
 img{
     width: 100%;
+    height: 275px;
+    object-fit: cover;
+}
+.container_menu{
+    position: relative;
+}
+.bg-grey{
+    position: absolute;
+    background-color: #F6F6F6;
+    top: -40px;
+    width: 100%;
+    height: 40px;
+    border-radius: 40px 40px 0 0;
 }
 .menu{
-    border-radius: 30px 30px 0px 0px;
     background-color: #F6F6F6;
     justify-content: center;
     align-items: center;
@@ -10,9 +22,9 @@ img{
     h1{
         font-family: "Shrikhand", serif;
         font-weight: 200;
-        text-align: center;
-        padding-left: 25px;
-        padding-top: 25px;
+    }
+    .heart2{
+        animation: like 0.1s;
     }
     .carte{
         position: relative;
@@ -37,7 +49,30 @@ img{
             font-weight: 700;
             font-size: 16px;
         }
+        .valid{
+            display: flex;
+            opacity: 0;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            position: absolute;
+            top: 0;
+            right: 0%;
+            height: 100%;
+            background-color: #99E2D0;
+            border-radius: 0px 20px 20px 0px;
+            font-size: 20px;
+            color: white;
+
+        }
         
+    }
+    .carte:hover .prix{
+        animation: slidePrix 0.5s forwards;
+    }
+    .carte:hover .valid{
+        opacity: 1;
+        animation: slideIn 0.5s forwards;
     }
     &__bouton{
         font-weight: 500;
@@ -54,33 +89,76 @@ img{
         border-radius: 25px;
     }
     .titre3{
-        position: relative;
+        display: flex;
+        gap : 15px;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
     }
     .titremenu{
         margin-left: 10px;
         text-align: left;
-    }
-    .titremenu::first-letter {
-        border-bottom: 2px solid #99E2D0;
         padding-bottom: 2px;
-      }
-    .heart2{
-        position: absolute;
-        top: 34px;
-        right: 10%;
     }
-    
+    &__section{
+        opacity: 0;
+        animation: appear 3s;
+        animation-fill-mode: both;
+    }
+    .entrees{
+        animation-delay: 0s;
+    }
+    .plats{
+        animation-delay: 1s;
+    }
+    .desserts{
+        animation-delay: 2s;
+    }
 }
 
-  @media (min-width: 1024px) {
+@keyframes appear{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+@keyframes slideIn {
+    from{
+        width: 0%;
+    }
+    to{
+        width: 65px;
+    }
+  }
+
+  @keyframes slidePrix {
+    from{
+        right: 15px;
+    }
+    to{
+        right: 80px;
+    }
+  }
+  @keyframes like{
+    from{
+        
+    } to{
+
+    }
+  }
+@media (min-width: 1024px) {
 
     img{
         height: 320px;
-        object-fit: cover;
     }
 
     .container_menu{
         max-width: 1024px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .menu{
