--- a/sass/main.css
+++ b/sass/main.css
@@ -10,6 +10,8 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 p {
@@ -238,6 +240,7 @@ footer {
   padding: 15px;
 }
 .restau__card .heart {
+  opacity: 1;
   position: absolute;
   right: 20px;
   bottom: 30px;
@@ -256,16 +259,34 @@ footer {
     grid-template-columns: 50% 50%;
     gap: 30px;
   }
+  .restau a {
+    width: 95%;
+  }
   .restau__card {
     width: 100%;
   }
 }
 img {
   width: 100%;
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.container_menu {
+  position: relative;
+}
+
+.bg-grey {
+  position: absolute;
+  background-color: #F6F6F6;
+  top: -40px;
+  width: 100%;
+  height: 40px;
+  border-radius: 40px 40px 0 0;
 }
 
 .menu {
-  border-radius: 30px 30px 0px 0px;
   background-color: #F6F6F6;
   justify-content: center;
   align-items: center;
@@ -274,9 +295,9 @@ img {
 .menu h1 {
   font-family: "Shrikhand", serif;
   font-weight: 200;
-  text-align: center;
-  padding-left: 25px;
-  padding-top: 25px;
+}
+.menu .heart2 {
+  animation: like 0.1s;
 }
 .menu .carte {
   position: relative;
@@ -302,6 +323,28 @@ img {
   font-weight: 700;
   font-size: 16px;
 }
+.menu .carte .valid {
+  display: flex;
+  opacity: 0;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0%;
+  height: 100%;
+  background-color: #99E2D0;
+  border-radius: 0px 20px 20px 0px;
+  font-size: 20px;
+  color: white;
+}
+.menu .carte:hover .prix {
+  animation: slidePrix 0.5s forwards;
+}
+.menu .carte:hover .valid {
+  opacity: 1;
+  animation: slideIn 0.5s forwards;
+}
 .menu__bouton {
   font-weight: 500;
   width: 50%;
@@ -317,30 +360,65 @@ img {
   border-radius: 25px;
 }
 .menu .titre3 {
-  position: relative;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 .menu .titremenu {
   margin-left: 10px;
   text-align: left;
-}
-.menu .titremenu::first-letter {
-  border-bottom: 2px solid #99E2D0;
   padding-bottom: 2px;
 }
-.menu .heart2 {
-  position: absolute;
-  top: 34px;
-  right: 10%;
+.menu__section {
+  opacity: 0;
+  animation: appear 3s;
+  animation-fill-mode: both;
+}
+.menu .entrees {
+  animation-delay: 0s;
+}
+.menu .plats {
+  animation-delay: 1s;
+}
+.menu .desserts {
+  animation-delay: 2s;
 }
 
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes slideIn {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 65px;
+  }
+}
+@keyframes slidePrix {
+  from {
+    right: 15px;
+  }
+  to {
+    right: 80px;
+  }
+}
+@keyframes like {}
 @media (min-width: 1024px) {
   img {
     height: 320px;
-    -o-object-fit: cover;
-       object-fit: cover;
   }
   .container_menu {
     max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .menu {
     margin: 0 auto;
