--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -23,6 +23,9 @@
         box-shadow: 0px 4px 10px 0px #00000040;
         border-radius: 25px;
     }
+    &__btn:hover {
+        background: linear-gradient(355deg, #9356DC 1%, #FF79DA 70%);
+    }
 }
 .fonctionnement{
     padding: 30px;
