--- a/sass/_menus.scss
+++ b/sass/_menus.scss
@@ -88,6 +88,9 @@ img{
         box-shadow: 0px 4px 10px 0px #00000040;
         border-radius: 25px;
     }
+    &__bouton:hover{
+            background: linear-gradient(355deg, #9356DC 1%, #FF79DA 70%);
+    }
     .titre3{
         display: flex;
         gap : 15px;
