--- a/sass/main.css
+++ b/sass/main.css
@@ -208,6 +208,7 @@ footer {
   }
   100% {
     opacity: 0;
+    z-index: -1;
   }
 }
 .explo {
@@ -235,6 +236,9 @@ footer {
   border: none;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
   border-radius: 25px;
+}
+.explo__btn:hover {
+  background: linear-gradient(355deg, #9356DC 1%, #FF79DA 70%);
 }
 
 .fonctionnement {
@@ -461,6 +465,9 @@ img {
   border: none;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.2509803922);
   border-radius: 25px;
+}
+.menu__bouton:hover {
+  background: linear-gradient(355deg, #9356DC 1%, #FF79DA 70%);
 }
 .menu .titre3 {
   display: flex;
