--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -33,17 +33,29 @@ padding: 25px;
 @media (min-width: 1024px) {
 
     .foot{
-        display:flex;
-        gap: 15px;
+        display: flex;
+        padding: 30px;
+        flex-direction: row-reverse;
+        align-items: center;
+        text-align: center;
+        gap: 50px;
+        h2{
+            padding: 0px 30px 0px 50px;
+            font-size: 20px;
+        }
         &__liens{
             display: flex;
+            order: 1;
             flex-direction: row-reverse;
-            gap: 30px;
+            gap: 10px;
+            .fir{
+                order: 1;
+            }
         }
         &__contact{
             display: flex;
             flex-direction: row-reverse;
-            gap: 30px;
+            gap: 10px;
         }
     }
 
