--- a/sass/_menus.scss
+++ b/sass/_menus.scss
@@ -99,10 +99,22 @@ img{
         align-items: center;
     }
     .titremenu{
+        position: relative;
         margin-left: 10px;
         text-align: left;
         padding-bottom: 2px;
+    
+        
     }
+    .titremenu::after{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 5%;
+        height: 2px; 
+        background-color: #99E2D0;
+      }
     &__section{
         opacity: 0;
         animation: appear 3s;
